Mess about with iteration with a window.